[package]
name = "hacl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.5"
skim = "0.10.4"
confy = "0.5.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = [ "blocking", "json" ]}
error-stack = "0.4"
owo-colors = "3.5.0"
